@@ -5,6 +5,7 @@
 	- Fix a typo.
 	- Pass arguments in correct order to ProtocolInfo comparison functions.
 	- Implement comparison of extra field of ProtocolInfo.
+	- Refer to the ProtocolInfo fields by terms used by UPnP AV specs.
 
 2008-02-11  Zeeshan Ali Khattak  <zeenix@gmail.com>
 
